--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -1,1 +1,21 @@
+// UTILS
+@import "./utils/variables";
 @import "./utils/visually-hidden";
+
+// BASE
+@import "./base/common";
+@import "./base/wraper";
+
+// COMPONENTS
+@import "./components/backdrop";
+@import "./components/modal-form";
+@import "./components/social-network-list";
+
+// LAYOUT
+@import "./layout/header";
+@import "./layout/hero";
+@import "./layout/priority";
+@import "./layout/what-we-do";
+@import "./layout/comand";
+@import "./layout/customer";
+@import "./layout/footer";
