--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -1,6 +1,7 @@
 // UTILS
 @import "./utils/variables";
 @import "./utils/visually-hidden";
+@import "./utils/mixin-social-network";
 
 // BASE
 @import "./base/common";
